fixed error on alignment and line height of default items

--- a/src/homeStyleSrc.scss
+++ b/src/homeStyleSrc.scss
@@ -813,8 +813,9 @@ body.home {
       text-align: center;
 
       & > h5 {
-        font-size: 1.2rem;
         margin-top: 0.8rem;
+        font-size: 1.2rem;
+        line-height: 1.5rem;
       }
 
       &:hover img,
@@ -840,6 +841,7 @@ body.home {
   @media (min-width: 700px) {     
     .items-container {
       flex-direction: row;
+      align-items: flex-start;
     
       .item {
         width: 30%;
